--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'dagger.hilt.android.plugin'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -15,6 +17,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    buildFeatures {
+        viewBinding = true
     }
 
     buildTypes {
@@ -42,4 +48,27 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation 'com.google.dagger:hilt-android:2.35'
+    kapt "com.google.dagger:hilt-android-compiler:2.35"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    kapt 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    implementation "com.squareup.moshi:moshi:1.12.0"
+    kapt "com.squareup.moshi:moshi:1.12.0"
+
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    kapt "com.squareup.retrofit2:converter-moshi:2.9.0"
+
+    implementation "com.jakewharton.threetenabp:threetenabp:1.2.4"
+    kapt "com.jakewharton.threetenabp:threetenabp:1.2.4"
+
+    implementation 'androidx.fragment:fragment-ktx:1.3.4'
+    implementation 'androidx.activity:activity-ktx:1.2.3'
+
+    kapt "androidx.lifecycle:lifecycle-compiler:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-runtime:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
 }
