--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,22 +41,24 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'com.google.dagger:hilt-android:2.35'
-    kapt "com.google.dagger:hilt-android-compiler:2.35"
+    implementation 'com.google.dagger:hilt-android:2.28-alpha'
+    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     kapt 'com.squareup.retrofit2:retrofit:2.9.0'
 
-    implementation "com.squareup.moshi:moshi:1.12.0"
+    implementation "com.squareup.moshi:moshi:1.9.3"
+    implementation "com.squareup.moshi:moshi-adapters:1.9.3"
     kapt "com.squareup.moshi:moshi:1.12.0"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.9.3"
 
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     kapt "com.squareup.retrofit2:converter-moshi:2.9.0"
@@ -64,7 +66,7 @@ dependencies {
     implementation "com.jakewharton.threetenabp:threetenabp:1.2.4"
     kapt "com.jakewharton.threetenabp:threetenabp:1.2.4"
 
-    implementation 'androidx.fragment:fragment-ktx:1.3.4'
+    implementation 'androidx.fragment:fragment-ktx:1.2.5'
     implementation 'androidx.activity:activity-ktx:1.2.3'
 
     kapt "androidx.lifecycle:lifecycle-compiler:2.3.1"
