--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,13 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime:2.3.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+
+    implementation "com.squareup.okhttp3:okhttp:4.7.2"
+    implementation "com.squareup.okhttp3:okhttp-urlconnection:4.7.2"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.6.0'
+    implementation 'com.readystatesoftware.chuck:library:1.1.0'
 }
