--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,6 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
     implementation 'com.facebook.stetho:stetho-okhttp3:1.6.0'
     implementation 'com.readystatesoftware.chuck:library:1.1.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
