--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,5 @@ dependencies {
     implementation 'com.readystatesoftware.chuck:library:1.1.0'
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.mikhaellopez:circularimageview:4.3.0'
 }
